-Updated csv with new column for latitute as distance from teh equator (ie no negative values) -Reorganizing outline and section titles -Focus on chunk C checking regression assumptions -Renamed 2 columns (irrigation->irrigated, duration.n.mos->exp_duration_mos) -Moved large chunks of code for regression into stats_outline_2020 to save for later if needed

--- a/Meta-analysis_stats_outline_2020.Rmd
+++ b/Meta-analysis_stats_outline_2020.Rmd
@@ -4,18 +4,21 @@ author: "Erika Foster"
 date: "1/13/2020"
 output: word_document
 ---
-Notes and Questions - Meetign w Courtland 20200626
+
+-push .csv
+
+Notes and Questions - Meeting w Courtland Kelly 20200626
 -normality of residuals??? meta-regression??
 -shorter term studies included?
 -how to treat zf/cf?
 -difference after multiplication by BD? (if not reported in the treatments - how can we get at stocks) - use MEMS model to predict BD and thus change in stocks
 -leave in MAP/MAT ? aridity index instead?
--use latitute (not post/neg) BUT as a "northness"
    #to combine datasets - use fertilized controls when possible= had a lower effect size (will not overestimate the effect?) Can we just include both cf and zf from a single paper, where autocorrelation is accounted for in the ACC number???
 
 -GitHub
-
+Completed: 20200713
 -Send Courtland:: Gurevitch 1992
+-use latitute (not post/neg) BUT as a "north-ness" (ONLY CHANGED ACC 843 and 188)
 
 Updated: 20200626 
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
